Added cdn-styles and cdn-scripts

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    {{content-for 'cdn-styles'}}
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/peepchat.css">
 
@@ -17,6 +18,8 @@
   <body>
     {{content-for "body"}}
 
+
+    {{content-for 'cdn-scripts'}}
     <script src="assets/vendor.js"></script>
     <script src="assets/peepchat.js"></script>
 
